--- a/src/components/body/Body.css
+++ b/src/components/body/Body.css
@@ -6,8 +6,15 @@
     text-align: center;
     padding: 2em 0;
 }
-.search-container h2{
-    font-size: 2em;
+.search-container input{
+    padding: 1em;
+}
+.search-container button{
+    padding: 1em;
+    background-color: #000;
+    border: none;
+    cursor: pointer;
+    color: #fff;
 }
 .filter{
     position: relative;
